# autoapply-ai

./: .env.example  .gitignore  docker-compose.yml  render.yaml
.claude/: launch.json
.github/workflows/: build-android.yml  build-ios.yml
apps/api/: .env.example  Dockerfile  alembic.ini  autoapply.db  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: __init__.py  application.py  chat.py  job.py  notification.py  profile.py  resume.py  subscription.py  user.py
apps/api/app/routers/: ai.py  applications.py  auth.py  jobs.py  notifications.py  resume.py  users.py
apps/api/app/schemas/: application.py  auth.py  job.py  notification.py  profile.py  user.py
apps/api/app/services/: ai_chat.py  ai_generator.py  job_matcher.py  oauth.py  resume_parser.py  storage.py
apps/api/app/workers/: celery_app.py  tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: e7d93fe89862_initial.py
apps/api/scripts/: seed.py
apps/web/: .env.example  BUILD_MOBILE.md  capacitor.config.ts  next.config.js  package-lock.json  package.json  store-listing.json  tailwind.config.ts  vercel.json
apps/web/android/app/: build.gradle
apps/web/public/: manifest.json  sw.js
apps/web/scripts/: generate-icons.js  generate-store-assets.js  svg-to-png.js
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ApplyPreviewModal.tsx  CookieConsent.tsx  providers.tsx
apps/web/src/lib/: api.ts  store.ts  theme.tsx
scripts/: init-db.sql
(+14 files in other folders)
